# file-server

./: .gitignore  README.md
.github/workflows/: rust.yml
file-service/: Cargo.toml
file-service/crates/common/: Cargo.toml
file-service/crates/common/src/: client.rs  command.rs  file.rs  lib.rs  middleware.rs  server.rs
file-service/crates/file-client/: Cargo.toml
file-service/crates/file-client/src/: flags.rs  main.rs
file-service/crates/file-server/: Cargo.toml
file-service/crates/file-server/src/: flags.rs  main.rs
file-service/crates/file-service/: Cargo.toml
file-service/crates/file-service/src/: file_client.rs  file_server.rs
file-service/crates/grpc-service/: Cargo.toml
file-service/crates/grpc-service/src/: file_client.rs  file_server.rs
file-service/crates/http-service/: Cargo.toml
file-service/crates/http-service/src/: file_server.rs  lib.rs  libmysql.rs
file-service/crates/http-service/src/sources/html/: index.html  index_axum.html  login.html
file-service/crates/service-protos/: Cargo.toml  build.rs
file-service/crates/service-protos/protos/file/: file.proto
file-service/crates/service-protos/src/: lib.rs
scripts/: install_protoc.sh  install_requirements.sh
