[workspace]
members = [
    "crates/file-client",
    "crates/common",
    "crates/service-protos",
    "crates/file-server",
    "crates/grpc-service",
    "crates/http-service"]
resolver = "2"

[profile.release]
panic = 'abort'

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
futures = { version = "0.3.31" }
tokio = { version = "1.40.0" }
tokio-stream = { version = "0.1.16" }
tonic = { version = "0.12.3" }
tower = { version = "0.5.1" }
tower-http = { version = "0.6.1" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }
console-api = { version = "0.6.0" }
console-subscriber = { version = "0.2.0" }
async-trait = { version = "0.1.83" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
clap = { version = "4.5.20" }
thiserror = "1.0.64"
log = {version = "0.4.2", features=["kv_unstable"]}
env_logger = "0.8"
actix-web = "4.0"

#[workspace.build-dependencies]
#tonic-build = { version = "0.12.3" }
