[workspace]
members = [
    "crates/file-client",
    "crates/common",
    "crates/service-protos",
    "crates/file-server",
    "crates/grpc-service",
    "crates/http-service"]
resolver = "2"

[profile.release]
panic = 'abort'

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
futures = { version = "0.3.31" }
tokio = { version = "1.40.0" }
tokio-stream = { version = "0.1.16" }
tonic = { version = "0.12.3" }
tower = { version = "0.5.1" }
tower-http = { version = "0.6.1" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }
async-trait = { version = "0.1.83" }
serde = { version = "1.0" }
serde_json = { version = "1.0.133" }
clap = { version = "4.5.21" }
thiserror = "2.0.3"
log = {version = "0.4.22", features=["kv_unstable"]}
env_logger = "0.11"
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.7.2"

#[workspace.build-dependencies]
#tonic-build = { version = "0.12.3" }
