[package]
name = "file-server"
version.workspace = true
edition.workspace = true

[dependencies]
service-protos = { path = "../service-protos" }
grpc-service = { path = "../grpc-service" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]