[package]
name = "http-service"
version.workspace = true
edition.workspace = true



[dependencies]
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }