[package]
name = "http-service"
version.workspace = true
edition.workspace = true



[dependencies]
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
axum = { workspace = true, features = ["multipart", "http2"] }
common = { path = "../common" }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
log = { workspace = true, features=["kv_unstable"] }
mysql = "25.0.1"